# coverletter-ai

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  database.py  main.py  pyproject.toml
backend/core/: config.py  security.py
backend/models/: config.py  cover_letter.py  user.py
backend/routers/: auth.py  cover_letters.py  resume.py
backend/schemas/: schemas.py
backend/services/: claude_service.py  llm_service.py  openai_service.py
backend/tests/: test_stream.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/api/: index.ts
frontend/src/assets/: main.css
frontend/src/components/: AppLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: GenerateView.vue  HistoryView.vue  HomeView.vue  LoginView.vue  ResumeView.vue
